Add annuities marketplace presentation and fix typos
Added a new Beamer presentation on equilibrium effects of price updating in a centralized annuities marketplace (Ppt/251203_pitchpizza.tex). Deleted an obsolete DOCX presentation. Corrected spelling of 'assymmetric' to 'asymmetric' in the model description and improved clarity in models/model7_assymInfo_search_and_learning_.tex.

--- a/models/model7_assymInfo_search_and_learning_.tex
+++ b/models/model7_assymInfo_search_and_learning_.tex
@@ -61,7 +61,7 @@
 \addbibresource{../references.bib}
 \begin{document}
 
-This document presents a model of Nash-Bertrand competition that includes selection, search and assymmetric information. The assymmetric information is modeled following \textcite{cosconati_competing_2025}. 
+This document presents a model of Nash-Bertrand competition that includes selection, search and asymmetric information. The asymmetric information is modeled following \textcite{cosconati_competing_2025}. 
 
 
 %% timing of the game 
@@ -71,11 +71,14 @@ A buyer has a private type, firms observe a noisy signal about the buyer's type 
 
 %% selection interacts with search 
 
-In the model search interacts with assymmetric information and with selection. 
-The interaction between search and selection is given by the joint density of search costs and types. Buyers decide to search based on two forces: their search cost and also the expected benefit from searching which will depend on their type. 
+In the model search interacts with asymmetric information and with selection. 
+The interaction between search and selection is given by the joint density of search costs and types. Buyers decide to search based: their search cost and the expected benefit from searching, which depends on their type. \footnote{\textcolor{red}{ADD THAT IT COMES FROM THE REVELATION OF INFORMATION.}}
+
+
+
 % search interacts with common value auction 
 
-Moreover when consumers search, firms are able to observe the offers of their rivals, which reveals information about the signals their rivals received in the first stage. Hence, searching can increase competition by reducing the assymmetric information between firms. This intuition is similar to \textcite{cosconati_competing_2025} who finds that pooling information across firms reduces informational rents and increases competition. 
+Moreover when consumers search, firms are able to observe the offers of their rivals, which reveals information about the signals their rivals received in the first stage. Hence, searching can increase competition by reducing the asymmetric information between firms. This intuition is similar to \textcite{cosconati_competing_2025} who finds that pooling information across firms reduces informational rents and increases competition. 
  
 
 
