Move and rename search_selection model files
Renamed and relocated search_selection.* files from new_ideas/ to models/ as model7_assymInfo_search_and_learning_.*, updating all associated auxiliary, log, and output files. Added new references and updated bibliography in LaTeX sources to reflect these changes.

--- a/Ppt/251203_pitchpizza.tex
+++ b/Ppt/251203_pitchpizza.tex
@@ -153,7 +153,8 @@ Diego Cussen
 
     \item Centralized marketplaces in selection markets : \textcite{abaluck_when_2023,tebaldi_estimating_2025} 
     
-    \item SCOMP specific: \textcite{boehm_intermediation_2024, illanes_retirement_2019, alcalde_intermediary_2021}
+    \item SCOMP specific: \textcite{boehm_intermediation_2024, illanes_retirement_2019, alcalde_intermediary_2021,aryal_auctioning_2021}
+    
     
     %\item Selection in multiple dimensions: \textcite{finkelstein_adverse_2004} and Finkelstein and McGarry (2006).  
 
